--- a/pinyougou-manager-web/src/main/webapp/admin/brand.html
+++ b/pinyougou-manager-web/src/main/webapp/admin/brand.html
@@ -17,136 +17,12 @@
 	<script src="../plugins/angularjs/pagination.js"></script>
 	<link  rel="stylesheet" href="../plugins/angularjs/pagination.css">
 	<!--分页组件end-->
-	<script type="text/javascript">
-		var app=angular.module('pinyougou',['pagination']);
-		app.controller('brandController',function ($scope,$http) {
-				$scope.findAll=function () {
-					$http.get('../brand/findAll.do').success(
-							function (response) {
-
-								$scope.list = response;
-							}
-					)
-				}
-
-				/*分页*/
-			//分页控件配置currentPage:当前页   totalItems :总记录数  itemsPerPage:每页记录数  perPageOptions :分页选项  onChange:当页码变更后自动触发的方法
-			$scope.paginationConf = {
-				currentPage: 1,
-				totalItems: 10,
-				itemsPerPage: 10,
-				perPageOptions: [10, 20, 30, 40, 50],
-				onChange: function(){
-					$scope.reloadList();
-				}
-			};
-
-			//刷新列表
-			$scope.reloadList=function(){
-				$scope.search( $scope.paginationConf.currentPage ,  $scope.paginationConf.itemsPerPage );
-			}
-
-			//分页
-			$scope.findPage=function(page,size){
-				$http.get('../brand/findPage.do?page='+page +'&size='+size).success(
-						function(response){
-							$scope.list=response.rows;//显示当前页数据
-							$scope.paginationConf.totalItems=response.total;//更新总记录数
-						}
-				);
-			}
-			$scope.add=function(){
-				$http.post('../brand/add.do',$scope.entity).success(
-						function(response){
-							if(response.success=true){
-								$scope.reloadList();
-							}else{
-								alert(response.message)
-							}
-						}
-				)
-			}
-
-			/**
-			* 修改前的查找
-			* */
-			$scope.findOne = function(id){
-				$http.get('../brand/findOne.do?id='+id).success(
-						function (response) {
-							$scope.entity = response;
-
-						}
-				)
-
-			}
-			/**
-			 * 修改
-			 * */
-			$scope.save=function(){
-				var methodName='add';//方法名
-				if($scope.entity.id!=null){
-					methodName='update';
-				}
-				$http.post('../brand/'+methodName +'.do',$scope.entity).success(
-						function(response){
-							if(response.success){
-								$scope.reloadList();//刷新
-							}else{
-								alert(response.message);
-							}
-						}
-				);
-			}
-
-			$scope.selectIds=[];//定义用户勾选的ID集合
-			//用户勾选复选框
-			$scope.updateSelection=function($event,id){
-				if($event.target.checked){
-					$scope.selectIds.push(id);//push向集合添加元素
-				}else{
-					var index= $scope.selectIds.indexOf(id);//查找值的 位置
-					$scope.selectIds.splice(index,1);//参数1：移除的位置 参数2：移除的个数
-				}
-			}
-
-			//删除
-			$scope.dele=function(){
+	<script type="text/javascript" src="../js/base_pagination.js"></script>
+	<script type="text/javascript" src="../js/service/brandService.js"></script>
+	<script type="text/javascript" src="../js/controller/baseController.js"></script>
+	<script type="text/javascript" src="../js/controller/brandController.js"></script>
 
 
-				if(confirm('确定要删除吗？')){
-					$http.get('../brand/delete.do?ids='+$scope.selectIds).success(
-							function(response){
-								if(response.success){
-									$scope.reloadList();//刷新
-								}else{
-									alert(response.message);
-								}
-							}
-					);
-				}
-
-			}
-
-			/**
-			 * 搜索
-			 * */
-			$scope.searchEntity={};
-			//条件查询
-			$scope.search=function(page,size){
-
-				$http.post('../brand/search.do?page='+page +'&size='+size, $scope.searchEntity).success(
-						function(response){
-							$scope.list=response.rows;//显示当前页数据
-							$scope.paginationConf.totalItems=response.total;//更新总记录数
-						}
-				);
-
-			}
-
-		})
-
-	</script>
-    
 </head>
 <body class="hold-transition skin-red sidebar-mini" ng-app="pinyougou" ng-controller="brandController" ng-init="findPage(1,10)">
   <!-- .box-body -->
